[gd_scene load_steps=4 format=3 uid="uid://cxywrel1bi6i7"]

[ext_resource type="Texture2D" uid="uid://dg6y4to1kwdm0" path="res://assets/sprites/exitArrow.png" id="1_625pt"]
[ext_resource type="Script" path="res://scripts/return_arrow.gd" id="1_ijrxb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_38f8m"]
radius = 21.0

[node name="returnArrow" type="Node2D"]
script = ExtResource("1_ijrxb")

[node name="area" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="area"]
shape = SubResource("CircleShape2D_38f8m")

[node name="control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="sprite" type="TextureRect" parent="control"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
texture = ExtResource("1_625pt")

[connection signal="input_event" from="area" to="." method="_on_area_input_event"]
[connection signal="mouse_entered" from="area" to="." method="_on_area_mouse_entered"]
[connection signal="mouse_exited" from="area" to="." method="_on_area_mouse_exited"]
